--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name":         "altair-test-checkout",
-    "version":      "0.0.3",
+    "name":         "altair-test-clone",
+    "version":      "0.0.4",
     "license":      "MIT"
 }
